syntax = "proto3";

package dataservice;

option go_package = "openusp/pkg/proto/dataservice";

import "google/protobuf/timestamp.proto";

// Device message
message Device {
    uint32 id = 1;
    string endpoint_id = 2;
    string product_class = 3;
    string manufacturer = 4;
    string model_name = 5;
    string serial_number = 6;
    string software_version = 7;
    string hardware_version = 8;
    string status = 9;
    google.protobuf.Timestamp last_seen = 10;
    string ip_address = 11;
    string connection_type = 12;
    google.protobuf.Timestamp created_at = 13;
    google.protobuf.Timestamp updated_at = 14;
}

// Parameter message
message Parameter {
    uint32 id = 1;
    uint32 device_id = 2;
    string path = 3;
    string value = 4;
    string type = 5;
    bool writable = 6;
    google.protobuf.Timestamp last_updated = 7;
    google.protobuf.Timestamp created_at = 8;
    google.protobuf.Timestamp updated_at = 9;
}

// Alert message
message Alert {
    uint32 id = 1;
    uint32 device_id = 2;
    string type = 3;
    string code = 4;
    string message = 5;
    int32 severity = 6;
    bool resolved = 7;
    google.protobuf.Timestamp resolved_at = 8;
    google.protobuf.Timestamp created_at = 9;
    google.protobuf.Timestamp updated_at = 10;
}

// Session message
message Session {
    uint32 id = 1;
    uint32 device_id = 2;
    string session_id = 3;
    string protocol = 4;
    string status = 5;
    google.protobuf.Timestamp started_at = 6;
    google.protobuf.Timestamp ended_at = 7;
    google.protobuf.Timestamp last_activity = 8;
    int32 message_count = 9;
    google.protobuf.Timestamp created_at = 10;
    google.protobuf.Timestamp updated_at = 11;
}

// Request/Response messages for Device operations
message CreateDeviceRequest {
    Device device = 1;
}

message CreateDeviceResponse {
    Device device = 1;
}

message GetDeviceRequest {
    uint32 id = 1;
}

message GetDeviceResponse {
    Device device = 1;
}

message GetDeviceByEndpointRequest {
    string endpoint_id = 1;
}

message GetDeviceByEndpointResponse {
    Device device = 1;
}

message ListDevicesRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListDevicesResponse {
    repeated Device devices = 1;
    int64 total = 2;
}

message UpdateDeviceRequest {
    Device device = 1;
}

message UpdateDeviceResponse {
    Device device = 1;
}

message DeleteDeviceRequest {
    uint32 id = 1;
}

message DeleteDeviceResponse {
    bool success = 1;
}

// Request/Response messages for Parameter operations
message CreateParameterRequest {
    Parameter parameter = 1;
}

message CreateParameterResponse {
    Parameter parameter = 1;
}

message GetDeviceParametersRequest {
    uint32 device_id = 1;
}

message GetDeviceParametersResponse {
    repeated Parameter parameters = 1;
}

message GetParametersByPathRequest {
    uint32 device_id = 1;
    string path_pattern = 2;
}

message GetParametersByPathResponse {
    repeated Parameter parameters = 1;
}

message DeleteParameterRequest {
    uint32 device_id = 1;
    string path = 2;
}

message DeleteParameterResponse {
    bool success = 1;
}

// Request/Response messages for Alert operations
message CreateAlertRequest {
    Alert alert = 1;
}

message CreateAlertResponse {
    Alert alert = 1;
}

message GetDeviceAlertsRequest {
    uint32 device_id = 1;
    optional bool resolved = 2;
}

message GetDeviceAlertsResponse {
    repeated Alert alerts = 1;
}

message ListAlertsRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message ListAlertsResponse {
    repeated Alert alerts = 1;
}

message ResolveAlertRequest {
    uint32 id = 1;
}

message ResolveAlertResponse {
    bool success = 1;
}

// Request/Response messages for Session operations
message CreateSessionRequest {
    Session session = 1;
}

message CreateSessionResponse {
    Session session = 1;
}

message GetSessionRequest {
    string session_id = 1;
}

message GetSessionResponse {
    Session session = 1;
}

message UpdateSessionActivityRequest {
    string session_id = 1;
}

message UpdateSessionActivityResponse {
    bool success = 1;
}

message CloseSessionRequest {
    string session_id = 1;
}

message CloseSessionResponse {
    bool success = 1;
}

message GetDeviceSessionsRequest {
    uint32 device_id = 1;
}

message GetDeviceSessionsResponse {
    repeated Session sessions = 1;
}

// Health check messages
message HealthCheckRequest {}

message HealthCheckResponse {
    string status = 1;
    string version = 2;
}

message GetStatusRequest {}

message GetStatusResponse {
    string service = 1;
    string version = 2;
    map<string, string> database_stats = 3;
    int64 device_count = 4;
    int64 timestamp = 5;
}

// Data Service gRPC interface
service DataService {
    // Health and status
    rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse);
    rpc GetStatus(GetStatusRequest) returns (GetStatusResponse);
    
    // Device operations
    rpc CreateDevice(CreateDeviceRequest) returns (CreateDeviceResponse);
    rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse);
    rpc GetDeviceByEndpoint(GetDeviceByEndpointRequest) returns (GetDeviceByEndpointResponse);
    rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse);
    rpc UpdateDevice(UpdateDeviceRequest) returns (UpdateDeviceResponse);
    rpc DeleteDevice(DeleteDeviceRequest) returns (DeleteDeviceResponse);
    
    // Parameter operations
    rpc CreateParameter(CreateParameterRequest) returns (CreateParameterResponse);
    rpc GetDeviceParameters(GetDeviceParametersRequest) returns (GetDeviceParametersResponse);
    rpc GetParametersByPath(GetParametersByPathRequest) returns (GetParametersByPathResponse);
    rpc DeleteParameter(DeleteParameterRequest) returns (DeleteParameterResponse);
    
    // Alert operations
    rpc CreateAlert(CreateAlertRequest) returns (CreateAlertResponse);
    rpc GetDeviceAlerts(GetDeviceAlertsRequest) returns (GetDeviceAlertsResponse);
    rpc ListAlerts(ListAlertsRequest) returns (ListAlertsResponse);
    rpc ResolveAlert(ResolveAlertRequest) returns (ResolveAlertResponse);
    
    // Session operations
    rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
    rpc GetSession(GetSessionRequest) returns (GetSessionResponse);
    rpc UpdateSessionActivity(UpdateSessionActivityRequest) returns (UpdateSessionActivityResponse);
    rpc CloseSession(CloseSessionRequest) returns (CloseSessionResponse);
    rpc GetDeviceSessions(GetDeviceSessionsRequest) returns (GetDeviceSessionsResponse);
}